fix: production environment variables and CORS for new domain